--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+ @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -11,6 +14,7 @@ body{
     align-items: center;
     justify-content: center;
     background:  hsl(206, 94%, 87%);
+    font-family: 'Outfit', sans-serif;
 }
 .home{
      background: white;
@@ -23,10 +27,22 @@ body{
      
 }
 
+@media screen and (max-width: 570px){
+    .home{
+        display: grid;
+        width: 400px;
+        height: 98vh;
+        padding: 0px;
+
+        
+        
+   }
+}
+
 section{
     width: 100%;
     height: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 /* sidebar styles */
@@ -63,6 +79,11 @@ section{
     padding: 4px 7px;
 }
 
+.sidebar-container > div > a.active{
+    background: hsl(228, 100%, 84%);
+    color: black;
+}
+
 .sidebar-container > div > a:hover{
     background:hsl(228, 100%, 84%);
     color: black;
@@ -70,14 +91,42 @@ section{
 
 }
 
+/* MOBILE STYLES FOR SIDEBAE */
+
+@media screen and (max-width: 560px){
+
+    .sidebar-container{
+        background: url('./assets/images/bg-sidebar-mobile.svg') no-repeat ;
+        object-fit: contain;
+        padding: 7px 9px ;
+        display: flex;
+        align-items: center;
+        gap: 50px;
+        width: 100%;
+        height: 90px;
+    
+    }
+
+    .sidebar-container > div > h3{
+        display: none;
+    }
+    
+    .sidebar-container > div p{
+       display: none;
+    }
+
+    .sidebar-container > div > a{
+        margin-left: 19px;
+    }
+
+}
+
 .next-container{
-    position: absolute;
-    bottom: 0;
-    right: 40px;
     display: flex;
     gap: 260px;
     padding: 14px 15px ;
 }
+
 
 .next-container > .back-btn > button {
     padding: 10px 9px;
@@ -94,6 +143,12 @@ border: 1px solid rgb(172, 170, 170);
 border-radius: 4px;
 }
 
+.next-container > .next-btn > button a{
+    text-decoration: none;
+    color: white;
+    padding: 10px 8px;
+}
+
 .next-container > .next-btn > button{
     padding: 10px 8px;
     border-radius: 7px;
@@ -108,7 +163,24 @@ border-radius: 4px;
     position: relative;
     width: 500px;
     overflow: hidden;
+    transition: 2s all ease-in-out;
 }
+
+@media screen and (max-width: 560px){
+
+    .next-container{
+        bottom: 30px;
+        right: 60px;
+        gap: 220px;
+    }
+
+    .content-container{
+        width: 100%;
+        margin-top: 30px;
+    }
+
+}
+
 
 /* option 1 styles */
 
@@ -147,7 +219,33 @@ form > input::placeholder{
     padding: 20px 25px ;
     transition: 0.8s all ease-in-out;
     cursor: pointer;
+}
 
+.planActive{
+    border: 1px solid rebeccapurple;
+    border-radius: 4px;
+    padding: 20px 25px ;
+    transition: 0.8s all ease-in-out;
+    cursor: pointer;
+    background: hsl(228, 100%, 84%);
+}
+
+.planActiveTwo{
+    border: 1px solid rebeccapurple;
+    border-radius: 4px;
+    padding: 20px 25px ;
+    transition: 0.8s all ease-in-out;
+    cursor: pointer;
+    background: hsl(228, 100%, 84%);
+}
+
+.planActiveThree{
+    border: 1px solid rebeccapurple;
+    border-radius: 4px;
+    padding: 20px 25px ;
+    transition: 0.8s all ease-in-out;
+    cursor: pointer;
+    background: hsl(228, 100%, 84%);
 }
 
 .plan > img {
@@ -166,13 +264,58 @@ form > input::placeholder{
 }
 
 .plan-billing {
-    background: gray;
+    background: rgb(192, 191, 191);
     display: flex;
-    margin-top: 15px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 45px;
     padding: 9px 14px ;
     gap: 10px;
     border-radius: 12px;
 }
+
+@media screen and (max-width: 560px){
+    .plans{
+        margin-top: 20px;
+        display: grid;
+        gap: 20px;
+    }
+    
+    .plan{
+        display: flex;
+        align-items: center;
+        padding: 10px 15px ;
+    }
+
+    .planActive{
+        display: flex;
+        align-items: center;
+        padding: 11px 16px ;
+    }
+    
+    .planActiveTwo{
+        display: flex;
+        align-items: center;
+        padding: 11px 16px ;
+        
+    }
+    
+    .planActiveThree{
+        display: flex;
+        align-items: center;
+        padding: 11px 16px ;
+        
+    }
+
+    .plan > img {
+        margin-bottom: 14px;
+        margin-right: 10px;
+    }
+    
+  
+
+}
+
 
 
 /*styles for toggle monthly and yearly */
@@ -222,6 +365,7 @@ input:checked + .slider::before{
 }
 
 
+
 /* step 3 */
 
 .add-ons-container > p{
@@ -239,6 +383,43 @@ position: relative;
 
 }
 
+.add-ons-container > .addons > .addonActive{
+    display: flex;
+    padding: 12px;
+    border: 1px solid rebeccapurple;
+    background: lightblue;
+    border-radius: 6px;
+    margin-bottom: 12px;
+    position: relative;
+    
+    }
+
+.add-ons-container > .addons > .addonActiveTwo{
+    display: flex;
+    padding: 12px;
+    border: 1px solid rebeccapurple;
+    background: lightblue;
+    border-radius: 6px;
+    margin-bottom: 12px;
+    position: relative;
+    
+    }
+    
+    .add-ons-container > .addons > .addonActiveThree{
+    display: flex;
+    padding: 12px;
+    border: 1px solid rebeccapurple;
+    background: lightblue;
+    border-radius: 6px;
+    margin-bottom: 12px;
+    position: relative;
+    
+    }
+
+
+
+
+
 .addon > label > span{
     display: inline;
     position: absolute;
@@ -252,6 +433,8 @@ position: relative;
     margin-right: 10px;
     cursor: pointer;
 }
+
+
 
 .addon > label > p{
     color: gray;
@@ -290,4 +473,35 @@ position: relative;
     font-weight: bold;
     font-size: 18px;
     
+}
+
+.total {
+    color: rebeccapurple;
+    font-weight: bold;
+}
+
+.thankYou-containter{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.thankYou > img {
+    margin-left: 60px;
+}
+
+.thankYou > h1 {
+    margin-left: 40px;
+}
+
+@media screen and (max-width: 560px){
+
+    .thankYou-containter{
+        width: 100%;
+        height: 60%;
+    }
+    
+
 }
